Add Cron and mailer module

--- a/package.json
+++ b/package.json
@@ -21,6 +21,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/schedule": "^2.1.0",
+    "@types/cron": "^2.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
