--- a/.env.exemple
+++ b/.env.exemple
@@ -20,3 +20,5 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 FRONTEND_URL=http://localhost:8080
+
+COOKIE_DOMAIN=localhost
