--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/cron": "^2.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
