--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,18 @@ jobs:
       - name: Stop running container on Raspberry Pi
         uses: docker-cli/action@v1
         with:
-          args: stop nuxt-app
-      - name: Transfer code to Raspberry Pi
-        uses: appleboy/rsync-action@master
+          args: stop nest-api
+      - uses: actions/checkout@v2
+      - name: rsync deployments
+        uses: burnett01/rsync-deployments@5.2.1
         with:
-          host: ${{secrets.RASP_HOST}}
-          username: ${{secrets.RASP_USER}}
-          password: ${{secrets.RASP_PASSWORD}}
-          port: ${{secrets.RASP_PORT}}
-          source: .
-          target: /home/${{secrets.RASP_USER}}/nuxt-app/api
+          switches: -avzr --delete
+          path: src/
+          remote_path: /home/hugorcd
+          remote_host: ${{ secrets.RASP_HOST }}
+          remote_user: ${{ secrets.RASP_USER }}
+          remote_key: ${{ secrets.DEPLOY_KEY }}
       - name: Start container on Raspberry Pi
         uses: docker-cli/action@v1
         with:
-          args: start nuxt-app
-      - name: Test the application
-        run: yarn test
+          args: start nest-api
