--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,27 @@
-name: Deploy to Production
-
+name: deploy to production v.2
 on:
   push:
     branches:
       - master
 
 jobs:
-  test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: yarn install
-      - name: Build the application
-        run: yarn build
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: yarn install
-      - name: Build the application
-        run: yarn build
-      - name: Stop running container on Raspberry Pi
-        uses: docker-cli/action@v1
+      - uses: actions/setup-node@v1
+
+      - run: yarn install
+      - run: yarn run build
+
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          args: stop nest-api
-      - uses: actions/checkout@v2
-      - name: rsync deployments
-        uses: burnett01/rsync-deployments@5.2.1
-        with:
-          switches: -avzr --delete
-          path: src/
-          remote_path: /home/hugorcd
-          remote_host: ${{ secrets.RASP_HOST }}
-          remote_user: ${{ secrets.RASP_USER }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
-      - name: Start container on Raspberry Pi
-        uses: docker-cli/action@v1
-        with:
-          args: start nest-api
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: unnecessary
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -p ${{ secrets.RASP_PORT}} -H ${{ secrets.RASP_HOST }}  >> ~/.ssh/known_hosts
+
+      - name: Deploy with rsync
+        run: rsync -avz -e "ssh -p ${{ secrets.RASP_PORT }}" ./dist/ ${{ secrets.RASP_USER }}@${{ secrets.RASP_HOST }}:/home/hugorcd/
