--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-
-      - run: yarn install
-      - run: yarn run build
-
+      - name: Install dependencies
+        run: yarn install
+      - name: Build project
+        run: yarn run build
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
