--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ jobs:
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: unnecessary
-
       - name: Adding Known Hosts
-        run: ssh-keyscan -p ${{ secrets.RASP_PORT}} -H ${{ secrets.RASP_HOST }}  >> ~/deploy-key/known_hosts
-
+        run: ssh-keyscan -p ${{ secrets.RASP_PORT}} -H ${{ secrets.RASP_HOST }}  >> ~/.ssh/known_hosts
       - name: Deploy with rsync
-        run: rsync -avz -e "ssh -p ${{ secrets.RASP_PORT }}" ./dist/ ${{ secrets.RASP_USER }}@${{ secrets.RASP_HOST }}:/home/hugorcd/
+        run: rsync -avz -e "ssh -p ${{ secrets.RASP_PORT }}" ./dist/ ${{ secrets.RASP_USER }}@${{ secrets.RASP_HOST }}:/home/hugorcd/nuxt-app/api
