--- a/.github/workflows/deploy-v2.yml
+++ b/.github/workflows/deploy-v2.yml
@@ -18,4 +18,4 @@ jobs:
         remote_host: ${{ secrets.RASP_HOST }}
         remote_user: ${{ secrets.RASP_USER }}
         remote_port: ${{ secrets.RASP_PORT }}
-        remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+        remote_key: ${{ secrets.SSH_KEY }}
