--- a/.github/workflows/deploy-v2.yml
+++ b/.github/workflows/deploy-v2.yml
@@ -13,7 +13,7 @@ jobs:
       uses: burnett01/rsync-deployments@5.2.1
       with:
         switches: -avzr --delete
-        path: src/
+        path: .
         remote_path: /home/hugorcd/nuxt-app/api
         remote_host: ${{ secrets.RASP_HOST }}
         remote_user: ${{ secrets.RASP_USER }}
