--- a/.github/workflows/deploy-v2.yml
+++ b/.github/workflows/deploy-v2.yml
@@ -9,11 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install Dependencies
+      run: yarn install
+    - name: Build project
+      run: yarn run build
     - name: rsync deployments
       uses: burnett01/rsync-deployments@5.2.1
       with:
         switches: -avzr --delete
-        path: .
+        path: dist/
         remote_path: /home/hugorcd/nuxt-app/api
         remote_host: ${{ secrets.RASP_HOST }}
         remote_user: ${{ secrets.RASP_USER }}
