--- a/.github/workflows/deploy-v2.yml
+++ b/.github/workflows/deploy-v2.yml
@@ -16,7 +16,7 @@ jobs:
     - name: rsync deployments
       uses: burnett01/rsync-deployments@5.2.1
       with:
-        switches: -avzr --delete
+        switches: -avzr
         path: dist/
         remote_path: /home/hugorcd/nuxt-app/api
         remote_host: ${{ secrets.RASP_HOST }}
