--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,41 +1,32 @@
-name: Create and publish Docker image
+name: Build and push Docker image
 
 on:
   push:
-    branches: master
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: nestboilerplateapi
+    branches:
+      - master
 
 jobs:
-  build-and-push-image:
+  build:
+    name: Build and push Docker image
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          version: latest
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ghcr.io/hugorcd/nestapi:latest
+            ghcr.io/hugorcd/nestapi:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
